# value-or-error

./: .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
doc/: Doxyfile.in
src/: try.h  type_traits.h  value_or_error.h
test/: business_service.cc  business_service.h  business_service_error.cc  business_service_error.h  business_service_test.cc  db_error.cc  db_error.h  db_error_test.cc  db_manager.cc  db_manager.h  db_manager_test.cc  enum_util.h  enum_util_test.cc  testrunner.cc  type_traits_test.cc  value_or_error_test.cc
tools/: Dockerfile  checkstyle.sh  install_hooks.py  utils.py
tools/cppcheck/: cppcheck  readme  suppressions
tools/cppcheck/cfg/: boost.cfg  bsd.cfg  cppcheck-cfg.rng  gnu.cfg  nspr.cfg  posix.cfg  sdl.cfg  std.cfg  windows.cfg  wxwidgets.cfg
tools/git-hooks/: pre-commit
